--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "jekyll serve",
-    "build": "set NODE_ENV=production && webpack -p",
+    "build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js -p",
     "lint": "standard --verbose | snazzy",
-    "watch": "webpack --watch"
+    "watch": "./node_modules/webpack/bin/webpack.js --watch"
   },
   "config": {
     "ghooks": {
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
+    "cross-env": "^5.2.1",
     "snazzy": "^7.0.0",
     "standard": "^10.0.1",
     "webpack": "^1.13.1",
